# cmd-vault

./: .gitignore  ARCHITECTURE-SUMMARY.md  Cargo.toml  DOCS.md  Dockerfile  Dockerfile.dev  QUICK-START-SCRIPTS.md  README.md  REFACTORING-ROADMAP.md  RUST-DEV-WORKFLOW.md  UI-ARCHITECTURE.md  UI-CONTRIBUTION-GUIDE.md  c-plant.txt  clippy.toml  cross-platform-guide.md  deny.toml  docker-compose.yml  main-og.rs  rustfmt.toml  smells.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml.disabled  release.yml.disabled
benches/: search_performance.rs
ci/: install-deps.sh  test.sh
docs/: DEVOPS-GUIDE.md  PLATFORM-DEV-GUIDE.md  README.md  TESTING-GUIDE.md
examples/: basic_usage.rs
scripts/: README.md  ci-disable.sh  ci-enable.sh  ci-status.sh  code-stats.sh  codebase-overview.sh  dev-check.sh  dev-setup.sh  project-overview.sh  refactor-check.sh
src/: app.rs  cli.rs  constants.rs  handler.rs  lib.rs  main.rs  models.rs  placeholders.rs  platform.rs  storage.rs  ui.rs  ui_old.rs  utils.rs
src/ui/: components.rs  layout.rs  mod.rs  modals.rs  render.rs
tests/fixtures/: sample_commands.json
tests/integration/: cli_tests.rs  storage_tests.rs
