[package]
name = "cmd-vault"
version = "0.1.0"
edition = "2024"
authors = ["Your Name <your.email@example.com>"]
description = "A blazingly fast terminal command manager built in Rust"
repository = "https://github.com/yourusername/cmd-vault"
license = "MIT"
keywords = ["cli", "terminal", "commands", "productivity", "tui"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

# Minimum Rust version
rust-version = "1.85"

# Include only necessary files in published crate
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE*",
]

[dependencies]
clap = { version = "4", features = ["derive"] }
copypasta = "0.10.2"
crossterm = "0.29.0"
ratatui = "0.30.2"
regex = "1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
dirs = "5.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
# Testing framework and utilities
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }

# Additional test utilities
pretty_assertions = "1.4"
rstest = "0.18"

[build-dependencies]
# Build-time dependencies if needed

[[bin]]
name = "cmd-vault"
path = "src/main.rs"

# Benchmark configuration
[[bench]]
name = "search_performance"
harness = false

# Example binaries
[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

# Profile configurations
[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
debug = true
opt-level = 0

[profile.test]
debug = true
opt-level = 1
